--- a/networkPlayer.css
+++ b/networkPlayer.css
@@ -83,6 +83,7 @@ div.ui-selectmenu-open, #fwStrategy-menu, #aLogic-menu {
 {
     border: 1px solid #aaaaaa;
     color: white !important;
+    text-shadow: 0 0 5px black;
     background: red !important;
 }
 
@@ -90,6 +91,7 @@ div.ui-selectmenu-open, #fwStrategy-menu, #aLogic-menu {
 {
 	border: 1px solid #aaaaaa;
 	color: white !important;
+	text-shadow: 0 0 5px black;
 	background: green !important;
 }
 
